Add titles model and integrate with app
Created a new Title model with name and description fields. Updated forms, templates, and blueprints to support title creation, listing, updating, and deletion. Added a new titles_blueprint to handle title-related routes and views. Updated app.py to register the new blueprint. Added a database backup before adding the title table.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,4 +21,8 @@
     <a href="{{ url_for('departments.create_department_page') }}" class="btn btn-info mt-2">Create New Department</a>
     <a href="{{ url_for('departments.departments') }}" class="btn btn-info mt-2">List All Departments</a>
 
+    <!-- Add link for creating titles -->
+    <h2 class="mt-4">Titles:</h2>
+    <a href="{{ url_for('titles.create_title') }}" class="btn btn-info mt-2">Create New Title</a>
+
 {% endblock %}
