Add employee creation and listing templates
This commit introduces new templates for creating and listing employees,
as well as removing the outdated create_faculty.html template. The
create_employee.html and list_employees.html templates are added with
appropriate forms and tables. Additionally, update_employee.html is
introduced for editing employee details. The index.html is updated to
include links to the new employee creation and listing pages. The
create_faculty.html template is removed as it is no longer needed.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,4 +26,9 @@
     <a href="{{ url_for('titles.list_titles') }}" class="btn btn-info mt-2">List All Titles</a>
     <a href="{{ url_for('titles.create_title') }}" class="btn btn-info mt-2">Create New Title</a>
 
-{% endblock %}
+    <!-- Add link for creating employees -->
+    <h2 class="mt-4">Employees:</h2>
+    <a href="{{ url_for('employees.create_employee') }}" class="btn btn-info mt-2">Create New Employee</a> 
+    <a href="{{ url_for('employees.list_employees') }}" class="btn btn-info mt-2">List Employees</a>
+
+    {% endblock %}
