--- a/app/templates/students.html
+++ b/app/templates/students.html
@@ -47,7 +47,7 @@
                         <td>{{ student.gender.gender_name }}</td>
                         <td>{{ student.grade_level.grade_name }}</td>
                         <td>
-                            <a href="{{ url_for('student_bp.update_student', student_id=student.student_id) }}" class="btn btn-primary btn-sm">Update</a>
+                            <a href="{{ url_for('student_bp.student_detail', student_id=student.student_id) }}" class="btn btn-primary btn-sm">Detail / Update</a>
                             <form method="post" action="{{ url_for('student_bp.delete_student', student_id=student.student_id) }}" style="display:inline;">
                                 <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this student?')">Delete</button>
                             </form>
