Add logging configuration and error handling for comment addition
- Added logging configuration to set logging level to DEBUG
- Implemented error handling when adding comments to catch exceptions
- Display error message if an error occurs while adding a comment

--- a/app/templates/student_detail.html
+++ b/app/templates/student_detail.html
@@ -13,7 +13,10 @@
             <h2>Comments</h2>
             <ul>
                 {% for comment in student.comments %}
-                    <li>{{ comment.comment_text }} - {{ comment.author.employee_fname }} {{ comment.author.employee_lname }}</li>
+                    <li>
+                        {{ comment.comment_text }} - {{ comment.author.employee_fname }} {{ comment.author.employee_lname }}
+                        <small>Created on: {{ comment.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</small>
+                    </li>
                 {% endfor %}
             </ul>
 
