--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,6 +23,9 @@
 
     <!-- Add link for listing parents -->
     <h2 class="mt-4">Parents:</h2>
+    
+    <a href="{{ url_for('parents.create_guardian_type') }}" class="btn btn-info mt-2">Create Guardian Type</a> 
+    <a href="{{ url_for('parents.list_guardian_types') }}" class="btn btn-info mt-2">List Guardian Types</a>
     <a href="{{ url_for('parents.get_parents') }}" class="btn btn-info mt-2">List All Parents</a>
     <a href="{{ url_for('parents.create_parent') }}" class="btn btn-info mt-2">Create New Parent</a>
     
@@ -36,5 +39,7 @@
     <h2 class="mt-4">Employees:</h2>
     <a href="{{ url_for('employees.create_employee') }}" class="btn btn-info mt-2">Create New Employee</a> 
     <a href="{{ url_for('employees.list_employees') }}" class="btn btn-info mt-2">List Employees</a>
+
+ 
 
 {% endblock %}
